tests/analyzer/errors/fn_declaration.ray
fn main() {}
fn add1(arg1: void) {}
fn add2(arg1: int, arg1: float) {}

fn add3() -> int {
    return true
}

fn add4() {
    return 1+1
}

fn add() -> int {}

fn bis() {}
fn bis() {}
